--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -32,3 +32,105 @@ h1 {
 h4 {
     font-size: 14px;
 }
+
+/* ----------- Sign Up ------------ */
+.background {
+    background-color: #D1D9DF;
+}
+.main-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: rgb(255, 255, 255);
+    border-radius: 20px;
+    width: 468px;
+    min-width: 467px;
+    height: 600px;
+    box-shadow: #2A384C 0px .3px 15px 0px;
+}
+.input-container {
+    display: flex;
+    width: 60%;
+    min-width: 430px;
+}
+
+.input-container > input {
+    background-color: #a0b2c2c2;
+    font-size: 20px;
+    padding-left: 20px;
+    border: none;
+    border-radius: 10px;
+    width: 100%;
+    height: 50px;
+    transition: .3s;
+    outline: none;
+}
+
+input::placeholder {
+    font-size: 18px;
+    color: #2A384C;
+}
+
+.group {
+    display: flex;
+    justify-content: space-between;
+}
+.gender {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0 20px;
+    align-items: center;
+}
+.gender-input {
+    padding: 10px 20px;
+    background-color: #a0b2c2c2;
+    border-radius: 10px;
+    color: #2A384C;
+    margin: 20px;
+}
+.submit {
+    padding: 10px 20px;
+    background-color: #2A384C;
+    border-radius: 10px;
+    color: #F0F0F0;
+    font-weight: bolder;
+    font-size: 18px;
+    margin-bottom: 20px;
+    border: none;
+}
+.login {
+    display: flex;
+    flex-direction: row;
+}
+
+.login > span {
+    color: #2A384C;
+    font-weight: 500;
+}
+
+.login > button {
+    font-size: 18px;
+    color: #2A384C;
+    border: none;
+    margin-left: 20px;
+    background:none;
+    font-weight: bolder;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: .3s;
+}
+
+.login > button:hover {
+    transition: .3s;
+    transform: scale(1.05);
+}
