--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -22,7 +22,7 @@ body {
     height: 100vh;
 }
 h1, h4 {
-    color: rgba(5, 5, 5, 0.737);
+    color: #2A384C;
     font-weight: bolder;
     transition: .2s;
 }
@@ -59,8 +59,7 @@ form {
 }
 .input-container {
     display: flex;
-    width: 60%;
-    min-width: 430px;
+    min-width: 400px;
 }
 
 .input-container > input {
@@ -70,7 +69,7 @@ form {
     border: none;
     border-radius: 10px;
     width: 100%;
-    height: 50px;
+    height: 45px;
     transition: .3s;
     outline: none;
 }
@@ -133,4 +132,8 @@ input::placeholder {
 .login > button:hover {
     transition: .3s;
     transform: scale(1.05);
+}
+.logo {
+    width: 150px;
+    height: 150px;
 }
