--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -21,7 +21,7 @@
 body {
     height: 100vh;
 }
-h1, h4 {
+h1, h4, h3 {
     color: #2A384C;
     font-weight: bolder;
     transition: .2s;
@@ -32,7 +32,16 @@ h1 {
 h4 {
     font-size: 14px;
 }
-
+h3 {
+    font-size: 18px;
+}
+a {
+    text-decoration: none;
+    color: #2A384C;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+}
 /* ----------- Sign Up ------------ */
 .background {
     background-color: #D1D9DF;
@@ -136,4 +145,69 @@ input::placeholder {
 .logo {
     width: 150px;
     height: 150px;
+}
+
+.logo-small {
+    width: 68px;
+    height: 68px;
+}
+/* Home Page */
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0px 0 10px 5%;
+    width: 20%;
+    height: 100%;
+    position: fixed;
+}
+
+.main {
+    width: 80%;
+    height: 100%;
+    margin-left: 20%;
+}
+
+/* Start Header Nav */
+.nav-links {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 35%;
+    justify-content: space-between;
+  }
+.nav-links a {
+    display: flex;
+    align-items: center;
+    padding: 8px 25px 8px 8px;
+    font-size: 15px;
+    width: fit-content;
+}
+.nav-links a i {
+    margin-right: 15px;
+    font-size: 1.5rem;
+}
+.nav-links a:hover {
+    background-color:#f0f9ff;
+    border-radius: 50px;
+}
+.nav-links a:hover:first-child {
+    background-color: #D1D9DF;
+}
+.nav-links a:first-child i {
+    margin: 0;
+}
+.logout-button {
+    background-color: #2A384C;
+    width: 90%;
+    height: 90px;
+    color: #fff;
+    font-weight: 700;
+    border: none;
+    padding: 10px 5px;
+    transition: 0.3s;
+    border-radius: 50px;
+    cursor: pointer;
+    margin-top: 15px;
+    font-size: 1rem;
 }
