--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -42,6 +42,12 @@ a {
     font-weight: 400;
     line-height: 24px;
 }
+ul {
+    list-style: none;
+}
+ul li {
+    padding: 10px;
+}
 /* ----------- Sign Up ------------ */
 .background {
     background-color: #F2E9eb;
@@ -54,7 +60,7 @@ a {
     width: 100%;
 }
 
-form {
+form, .chat-box {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,9 +72,9 @@ form {
     height: 600px;
     box-shadow: #31383F 0px .3px 15px 0px;
 }
-.input-container {
+.input-container, .input-container-msg {
     display: flex;
-    min-width: 400px;
+    min-width: 450px;
 }
 
 .input-container > input, textarea {
@@ -285,4 +291,77 @@ textarea {
 .image {
     display: flex;
     justify-content: center;
+}
+.chat-box {
+    position: relative;
+}
+
+.input-container-msg > button {
+    background-color: #31383F;
+    font-size: 20px;
+    color: white;
+    border: none;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    width: 30%;
+    height: 45px;
+}
+
+.chats {
+    min-width: 467px;
+    height: 600px;
+    overflow: auto;
+    float: left;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.chat-box {
+    display: flex;
+    justify-content: space-between;
+    height: 500px;
+}
+.sender {
+    width: 45%;
+    background-color: #F2E9eb;
+    border-radius: 10px;
+    height: fit-content;
+    margin-bottom: 10px;
+}
+.reciever {
+    width: 45%;
+    background-color: #31383f69;
+    border-radius: 10px;
+    height: fit-content;
+    margin-bottom: 10px;
+}
+.chats-section {
+    display: flex;
+    flex-direction: column;
+}
+.chat-box-input {
+    position: sticky;
+    bottom: 0px;
+    left: 0;
+}
+.chat-box-messages {
+    padding: 20px;
+}
+
+.input-container-msg > input {
+    background-color: #f2e9ebc3;
+    font-size: 20px;
+    padding-left: 20px;
+    border: none;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    width: 100%;
+    height: 45px;
+    transition: .3s;
+    outline: none;
+}
+.chats::-webkit-scrollbar {
+    display: none;
 }
