--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -401,6 +401,48 @@ textarea {
     color: white;
 }
 
+/* PopUp Inform */
+.popup {
+    transition: top 0.25s ease;
+    position: absolute;
+    top: 1%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 468px;
+    margin: auto;
+    overflow: auto;
+    background: #F2E9eb;
+    border-radius: 15px;
+    padding: 1em 2em;
+    height: fit-content;
+    box-shadow: 2px 2px 25px 2px rgba(0, 0, 0, 0.434);
+    visibility: hidden;
+}
+.popup-visible {
+    visibility: visible;
+}
+.popup .infos {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.popup .submit {
+    width: 30%;
+    align-self: center;
+    margin-top: 30px;
+}
+.close-btn {
+    background-color: transparent;
+    outline: inherit;
+    border: none;
+}
+.bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
   /* Media Query */
 @media only screen and (max-width: 800px) {
     
