--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -71,7 +71,12 @@ form, .chat-box {
     width: 468px;
     min-width: 467px;
     height: 600px;
-    box-shadow: #31383F 0px .3px 15px 0px;
+    box-shadow:  18px 18px 56px #cec6c8,
+             -18px -18px 56px #cec6c8;
+}
+.chat-box {
+    box-shadow:  18px 18px 56px #cec6c8,
+             -18px -18px 56px #ffffff;
 }
 .input-container, .input-container-msg {
     display: flex;
@@ -244,7 +249,8 @@ textarea {
     margin-left: 30px;
     margin-bottom: 50px;
     border-radius: 20px;
-    box-shadow: #31383F 0px 0px 10px 0px;
+    box-shadow:  18px 18px 56px #cec6c8,
+             -18px -18px 56px #ffffff;
 }
 .column:hover {
     transition: width 2s;
@@ -388,8 +394,9 @@ textarea {
 .users {
     width: 200px;
     height: 500px;
-    background-color: #fff;
-    box-shadow: #31383F 0px 0px 10px 0px;
+    background-color: #F2E9eb;
+    box-shadow:  18px 18px 56px #cec6c8,
+             -18px -18px 56px #ffffff;
     border-radius: 20px;
 }
 
@@ -419,7 +426,8 @@ textarea {
     border-radius: 15px;
     padding: 1em 2em;
     height: fit-content;
-    box-shadow: 2px 2px 25px 2px rgba(0, 0, 0, 0.434);
+    box-shadow:  18px 18px 56px #cec6c8,
+             -18px -18px 56px #ffffff;
     visibility: hidden;
 }
 .popup-visible {
